- [add] show container on rx/tx options
- [add] lock container to prevent removal, and to prevent add/remove of items. You can still adjust items
- [add] dark mode option added to BsdWorld urls in Web Image item
- [change] meter container borders have been reduced
- [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
- [change] containers no longer store/convert all skin meter images, only the ones required for that specific container. Considerable memory savings
- [change] filter setup form now stores/recalls location
- [change] Button actions processed more simply when G2 enabled (no shift action etc) - G8NJJ
- [change] rotator meter item now can be shown in az/ele/both mode. Requires you to remove-add the rotator if you were using it
- [change] can now have up to 50 multimeter containers
- [change] multimeter meter items are not limited. You can have unlimited in use at a time in a single container
- [change] midi micgain now is full range -40 to 10 (default mic gain)
- [change] midi comp is now full range 0-20
- [change] midi rit - now hold shift when turning for smaller change ~ -250 to 250
- [change] renamed the [HPF/BPF ByPass on PS] button in code so that a blanket default of ON will be applied everywhere to everyone. Change the setting if required
- [change] forced the bpfs bypass check to be on as default
- [change] simplification improvements to db import
- [change] noise floor approximation now enters 'fast attack' mode more frequently for quicker floor detection (changing modes/antennas/etc)
- [change] the dB shift setting for AGC auto noise floor compensation is now a true shift from NF. You will probably need to tweak your previous setting
- [change] the shutdown log is defaulted off. Use command line param -logshutdown to cause Thetis to create a shutdown_log.txt file if you are having shutdown issues which can then be sent in for analysis