@@ -71,6 +71,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [add] show container on rx/tx options
 - [add] lock container to prevent removal, and to prevent add/remove of items. You can still adjust items
 - [add] dark mode option added to BsdWorld urls in Web Image item
+- [add] use command line option -cmasioconfig to add a new cmasio tab to audio setting. Remove old cmasio settings from the registry if you want to use this feature as they have moved. See notes in the tab
 - [change] meter container borders have been reduced
 - [change] importing a db with meter containers will no longer clear existing ones, they will be added if possible
 - [change] containers no longer store/convert all skin meter images, only the ones required for that specific container. Considerable memory savings
